book/tests/snapshots/snapshot__tests__prql__language-features__target-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.postgres\n\nfrom employees\nsort age\ntake 10\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  age
LIMIT
  10

