book/tests/snapshots/snapshot__tests__prql__language-features__target-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nprql target:sql.mssql\n\nfrom employees\nsort age\ntake 10\n"
---
SELECT
  TOP (10) *
FROM
  employees
ORDER BY
  age

