book/tests/snapshots/snapshot__tests__prql__language-features__target-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql version:\"0.5\"\n\nfrom employees\n"
---
prql version:^0.5



from employees



